# Ampalibe

./: .gitignore  .readthedocs.yaml  CHANGELOG.md  Dockerfile  LICENSE  README.md  example.env  requirements.txt  setup.cfg  setup.py
.github/ISSUE_TEMPLATE/: bug_report.md
.github/workflows/: cd-pg.yml  cd-pypi.yml  ci-python-package.yml  ci.yml  docker-image.yml  main.yml
ampalibe/: __init__.py  _cmd.py  _logger.py  admin.py  cmd.py  constant.py  core.py  crypt.py  custom_cmd.py  decorators.py  extras.py  logger.py  messenger.py  model.py  old.py  payload.py  requete.py  server.py  singleton.py  source.py  tools.py  ui.py  utils.py
ampalibe/assets/public/: hello.txt
ampalibe/utils/: __init__.py  payload_class.py
automate/: deploy.sh  test.sh
automate/app/: .env  conf.py  core.py  langs.json
docs/: Makefile  make.bat
docs/source/: api.rst  command.rst  conf.py  index.rst  intro.rst  messenger.rst  more.rst  quickstart.rst  usage.rst
docs/source/_build/doctrees/: api.doctree  command.doctree  environment.pickle  index.doctree  intro.doctree  messenger.doctree  more.doctree  quickstart.doctree  usage.doctree
docs/source/_build/html/: .buildinfo  api.html  command.html  genindex.html  index.html  intro.html  messenger.html  more.html  objects.inv  quickstart.html  search.html  searchindex.js  usage.html
docs/source/config/: conf.py
example/default/: .env  core.py  langs.json
src/: conf.py  core.py  example.env  server.py
src/assets/: __info.txt
src/controllers/: core.py
src/models/: requete.py
tests/: deploy.sh  test.py  test.sh  test_api_messenger.py  test_cli.sh
tests/app/: conf.py  core.py
(+4 files in other folders)
