[metadata]
name = Ampalibe
version = 1.1.6
author = iTeam-$
author_email = contact@iteam-s.mg
description = Ampalibe is a lightweight Python framework for building Facebook Messenger bots faster.
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/iTeam-S/ampalibe
project_urls =
    Bug Tracker = https://github.com/iTeam-S/ampalibe/issues
classifiers =
    Programming Language :: Python :: 3
    Programming Language :: Python :: 3.7
    Programming Language :: Python :: 3.8
    Programming Language :: Python :: 3.9
    Programming Language :: Python :: 3.10
    Programming Language :: Python :: 3.11
    License :: OSI Approved :: MIT License
    Operating System :: OS Independent

[options]

packages = find:
python_requires = >=3.7
